Correct viewport dims attempt 4 overflow hidden

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 body {
   max-width: 100vw;
   max-height: 100vh;
+  overflow: hidden;
 }
 
 .col {
@@ -71,6 +72,7 @@ h1 {
        max-height: 100vh;
        margin: 0;
        padding: 0;
+       overflow: hidden;
    }
     h1 {
       font-size: small;
